deps/v8/test/message/fail/new-target-prefix-op.out
*%(basename)s:5: SyntaxError: Invalid left-hand side expression in prefix operation
function f() { ++new.target }
                 ^^^^^^^^^^
SyntaxError: Invalid left-hand side expression in prefix operation
